Session06/lab62DeplWithService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.24-alpine-slim
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"          
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP  
  selector:
    app: nginx
  ports:
  - name: service-port
    protocol: TCP
    port: 80
    targetPort: http
