Session06/lab62SecondApp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab62secondapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: second-nginx
  template:
    metadata:
      labels:
        app: second-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html                   
      volumes:
      - name: nginx-html
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: second-app-service
spec:
  type: ClusterIP  
  selector:
    app: second-nginx
  ports:
  - name: service-port
    protocol: TCP
    port: 80
    targetPort: 80
