Session06/lab62SecondHTTProute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: lab62second-app
spec:
  parentRefs:
  - kind: Gateway
    name: lab62gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /other-app  
      backendRefs:
      - name: second-app-service
        port: 80
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
